--- a/BET_House_Trident/config_r4.json
+++ b/BET_House_Trident/config_r4.json
@@ -1,15 +1,11 @@
 {
 	"plc_ip" : "120.123.249.82",
-    "mnKeyenceIP" : {
-        "3" : "172.19.145.80",
-        "4" : "172.19.146.81",
-        "5" : "172.19.147.82"
+    "keyence_ip" : {
+        "4" : "172.19.146.81"
        
     },
     "mnTagPrefix" : {
-        "3" : "DU050CA02.CAM01",
-        "4" : "DU050CA03.CAM01",
-        "5" : "DU050CA03.CAM02"
+        "4" : "DU050CA03.CAM01"
     },
     "HMI_csv" : "",
     "FTP_directory" : "E:\\FTP\\",
